--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,10 +17,16 @@
 }
 
 .page {
+  @include breakpoint($medium) {
+    @include span(10 of 12 last);
+    @include prefix(1 of 12);
+    @include suffix(1 of 12);
+  }
+
   @include breakpoint($large) {
     @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include prefix(1 of 12);
+    @include suffix(1 of 12);
   }
 
   .page__inner-wrap {
@@ -73,10 +79,10 @@
   }
 
   a {
-    text-decoration: underline;
+    text-decoration: none;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
 
       img {
         box-shadow: 0 0 10px rgba(#000, 0.25);
