--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,9 @@ body {
   padding-bottom: 9em;
   color: $text-color;
   font-family: $global-font-family;
-  line-height: 1.5;
+  line-height: 1.6;
+  font-weight: 400;
+  letter-spacing: 0.01em;
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
@@ -22,35 +24,43 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 2em 0 0.5em;
-  line-height: 1.2;
+  margin: 2em 0 0.8em;
+  line-height: 1.3;
   font-family: $header-font-family;
-  font-weight: bold;
+  font-weight: 600;
+  color: $darker-gray;
+  letter-spacing: -0.02em;
 }
 
 h1 {
   margin-top: 0;
   font-size: $type-size-3;
+  font-weight: 700;
 }
 
 h2 {
   font-size: $type-size-4;
+  font-weight: 600;
 }
 
 h3 {
   font-size: $type-size-5;
+  font-weight: 600;
 }
 
 h4 {
   font-size: $type-size-6;
+  font-weight: 600;
 }
 
 h5 {
   font-size: $type-size-6;
+  font-weight: 500;
 }
 
 h6 {
   font-size: $type-size-6;
+  font-weight: 500;
 }
 
 small, .small {
@@ -58,7 +68,9 @@ small, .small {
 }
 
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: 1.5em;
+  line-height: 1.7;
+  color: $text-color;
 }
 
 u,
