--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,14 +33,14 @@ $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 
 /* type scale */
-$type-size-1                : 2.441em;  // ~39.056px
-$type-size-2                : 1.953em;  // ~31.248px
-$type-size-3                : 1.563em;  // ~25.008px
-$type-size-4                : 1.25em;   // ~20px
-$type-size-5                : 1em;      // ~16px
-$type-size-6                : 0.75em;   // ~12px
-$type-size-7                : 0.6875em; // ~11px
-$type-size-8                : 0.625em;  // ~10px
+$type-size-1                : 2.2em;   // ~35px - slightly smaller for better readability
+$type-size-2                : 1.8em;   // ~29px
+$type-size-3                : 1.4em;   // ~22px
+$type-size-4                : 1.2em;   // ~19px
+$type-size-5                : 1em;     // ~16px
+$type-size-6                : 0.85em;  // ~14px
+$type-size-7                : 0.75em;  // ~12px
+$type-size-8                : 0.65em;  // ~10px
 
 
 /*
@@ -48,17 +48,17 @@ $type-size-8                : 0.625em;  // ~10px
    ========================================================================== */
 
 $gray                       : #7a8288;
-$dark-gray                  : mix(#000, $gray, 40%);
-$darker-gray                : mix(#000, $gray, 60%);
+$dark-gray                  : #333333;
+$darker-gray                : #1a1a1a;
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
 $background-color           : #fff;
-$code-background-color      : #fafafa;
+$code-background-color      : #f8f8f8;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$text-color                 : #333333;
+$border-color               : #e1e4e8;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
@@ -90,7 +90,7 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
+$link-color                 : #2C5F8C;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
@@ -113,7 +113,7 @@ $x-large                    : 1800px;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
-$large                      : 925px !default;
+$large                      : 1200px !default;
 $x-large                    : 1280px !default;
 
 /*
