--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -15,14 +15,19 @@
   </div>
 
   <div class="author__content">
-    <h3 class="author__name">{{ author.name }}</h3>
+    <h3 class="author__name">
+      {{ author.name }}
+      {% if author.chinese_name %}
+        <br><span class="author__chinese-name">{{ author.chinese_name }}</span>
+      {% endif %}
+    </h3>
     {% if author.bio %}<p class="author__bio">{{ author.bio }}</p>{% endif %}
   </div>
 
   <div class="author__urls-wrapper">
     <button class="btn btn--inverse">Follow</button>
     <ul class="author__urls social-icons">
-      {% if author.location %}
+      {% if author.location and author.location != "" %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
       {% endif %}
       {% if author.employer %}
