--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -68,6 +68,43 @@ div.sidebar,
   color: white !important;
 }
 
+/* Navigation links - ensure consistent colors */
+.masthead a,
+.masthead__menu a,
+.masthead__menu-item a,
+.greedy-nav a,
+.visible-links a {
+  color: #2C5F8C !important;
+  text-decoration: none !important;
+}
+
+.masthead a:hover,
+.masthead__menu a:hover,
+.masthead__menu-item a:hover,
+.greedy-nav a:hover,
+.visible-links a:hover {
+  color: #1e4a6b !important;
+  text-decoration: none !important;
+}
+
+.masthead a:visited,
+.masthead__menu a:visited,
+.masthead__menu-item a:visited,
+.greedy-nav a:visited,
+.visible-links a:visited {
+  color: #2C5F8C !important;
+  text-decoration: none !important;
+}
+
+.masthead a:active,
+.masthead__menu a:active,
+.masthead__menu-item a:active,
+.greedy-nav a:active,
+.visible-links a:active {
+  color: #2C5F8C !important;
+  text-decoration: none !important;
+}
+
 /* Specific styling for author name - center it */
 .sidebar .author__name {
   text-align: center !important;
@@ -114,7 +151,7 @@ div.sidebar,
 /* Modern typography improvements */
 body {
   font-weight: 400 !important;
-  line-height: 1.6 !important;
+  line-height: 1.4 !important;
   color: #333333 !important;
   letter-spacing: 0.01em !important;
 }
@@ -122,7 +159,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #1a1a1a !important;
   font-weight: 600 !important;
-  line-height: 1.3 !important;
+  line-height: 1.2 !important;
   letter-spacing: -0.02em !important;
 }
 
@@ -131,9 +168,9 @@ h1 {
 }
 
 p {
-  line-height: 1.7 !important;
+  line-height: 1.5 !important;
   color: #333333 !important;
-  margin-bottom: 1.5em !important;
+  margin-bottom: 1.2em !important;
 }
 
 /* Global link styling - dark blue color, no underlines */
@@ -178,12 +215,25 @@ a:visited {
 
 /* Better list styling */
 ul, ol {
-  line-height: 1.7 !important;
+  line-height: 1.5 !important;
+  margin-left: 0 !important;
+  padding-left: 1.2em !important;
 }
 
 li {
-  margin-bottom: 0.6em !important;
+  margin-bottom: 0.4em !important;
   color: #333333 !important;
+}
+
+/* Remove indentation from main content lists */
+.page__content ul,
+.page__content ol {
+  margin-left: 0 !important;
+  padding-left: 1.2em !important;
+}
+
+.page__content li {
+  margin-left: 0 !important;
 }
 </style>
 
