--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -148,6 +148,15 @@ div.sidebar,
   color: white !important;
 }
 
+
+
+/* Fine-tune the social icon positioning */
+.sidebar .author__urls i,
+.sidebar .author__urls-wrapper i {
+  margin-right: 0 !important;
+  margin-left: -0.8em !important;
+}
+
 /* Modern typography improvements */
 body {
   font-weight: 400 !important;
