--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 2em;
+  margin-top: 0;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
@@ -18,15 +18,15 @@
 
 .page {
   @include breakpoint($medium) {
-    @include span(10 of 12 last);
+    @include span(9 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(1 of 12);
+    @include suffix(0.5 of 12);
   }
 
   @include breakpoint($large) {
-    @include span(10 of 12 last);
+    @include span(9 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(1 of 12);
+    @include suffix(0.5 of 12);
   }
 
   .page__inner-wrap {
