--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -174,10 +174,12 @@ div.sidebar,
 .sidebar .author__urls {
   list-style: none !important;
   padding: 0 !important;
+  text-align: center !important;
 }
 
 .sidebar .author__urls li {
   margin: 0.3em 0 !important;
+  text-align: center !important;
 }
 
 /* Navigation menu styling (like Prof. Liang's) */
@@ -236,11 +238,14 @@ div.sidebar,
 /* Align social links with navigation links */
 .sidebar .author__urls li {
   margin-left: 0 !important;
-  padding-left: 3em !important;
+  padding-left: 0 !important;
+  text-align: center !important;
 }
 
 .sidebar .author__urls a {
-  padding-left: 0.5em !important;
+  padding-left: 0 !important;
+  text-align: center !important;
+  display: inline-block !important;
 }
 
 /* Modern typography improvements */
