--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -90,7 +90,7 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : #2C5F8C;
+$link-color                 : #20ddfa;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
