--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -370,18 +370,18 @@ p {
 
 /* Global link styling - dark blue color, no underlines */
 a {
-  color: #2C5F8C !important;
+  color: #0a4559 !important;
   text-decoration: none !important;
   font-weight: 500 !important;
 }
 
 a:hover {
-  color: #1e4a6b !important;
+  color: #0a4559 !important;
   text-decoration: none !important;
 }
 
 a:visited {
-  color: #4a7ba7 !important;
+  color: #0a4559 !important;
   text-decoration: none !important;
 }
 
@@ -390,7 +390,7 @@ a:visited {
 .archive a,
 .list__item a,
 .grid__item a {
-  color: #2C5F8C !important;
+  color: #1194c0 !important;
   text-decoration: none !important;
   font-weight: 500 !important;
 }
@@ -399,7 +399,7 @@ a:visited {
 .archive a:hover,
 .list__item a:hover,
 .grid__item a:hover {
-  color: #1e4a6b !important;
+  color: #ec9018 !important;
   text-decoration: none !important;
 }
 
@@ -498,6 +498,15 @@ article.page {
   width: 100% !important;
   height: 1px !important;
   background-color: #2C5F8C !important;
+}
+
+/* Special styling for award links */
+.page__content a.highlight-link {
+  color: rgb(231, 76, 60) !important;
+}
+
+.page__content a.highlight-link:hover {
+  color: rgb(200, 50, 40) !important;
 }
 </style>
 
