--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -11,6 +11,15 @@
           animation-delay: 0.15s;
   z-index: 20;
 
+  @media screen and (max-width: $small) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
   &__inner-wrap {
     @include container;
     @include clearfix;
@@ -19,6 +28,13 @@
 
     @include breakpoint($x-large) {
       max-width: $x-large;
+    }
+
+    @media screen and (max-width: $small) {
+      padding: 0.2em 0.5em;
+      max-height: 50px;
+      display: flex;
+      align-items: center;
     }
 
     nav {
