--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -14,6 +14,11 @@
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
+
+  @media screen and (max-width: $small) {
+    margin-top: 50px; /* Add margin to account for fixed header */
+    padding-top: 1em;
+  }
 }
 
 .page {
