--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <meta name="google-site-verification" content="FeKMujXqA2nHgfvElWNnXzgQWeH9BrG55erv3C2MyiA" />
 
