--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -183,6 +183,23 @@
     padding: 0.5rem 0;
     color: $masthead-link-color;
     text-decoration: none;
+    position: relative;
+
+    &.active {
+      color: $primary-color;
+      font-weight: bold;
+
+      &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background-color: $primary-color;
+        transition: transform 0.3s ease;
+      }
+    }
 
     &:hover {
       color: $masthead-link-color-hover;
