--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,11 +7,11 @@
   <!-- Navigation Menu Section (matching top nav) -->
   <div class="sidebar__nav-menu">
     <ul class="nav__menu-items">
-      <li><a href="{{ base_path }}/">[About]</a></li>
-      <li><a href="{{ base_path }}/publications/">[Publication]</a></li>
-      <li><a href="{{ base_path }}/bio/">[Bio]</a></li>
-      <li><a href="{{ base_path }}/media-talks/">[Media/Talk]</a></li>
-      <li><a href="{{ base_path }}/team/">[Team]</a></li>
+      <li><a href="{{ base_path }}/" {% if page.url == '/' %}class="active"{% endif %}>[About]</a></li>
+      <li><a href="{{ base_path }}/publications/" {% if page.url contains '/publications/' %}class="active"{% endif %}>[Publication]</a></li>
+      <li><a href="{{ base_path }}/bio/" {% if page.url contains '/bio/' %}class="active"{% endif %}>[Bio]</a></li>
+      <li><a href="{{ base_path }}/media-talks/" {% if page.url contains '/media-talks/' %}class="active"{% endif %}>[Media/Talk]</a></li>
+      <li><a href="{{ base_path }}/team/" {% if page.url contains '/team/' %}class="active"{% endif %}>[Research Team]</a></li>
     </ul>
   </div>
   
