--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -6,242 +6,267 @@
    Default
    ========================================================================== */
 
-   .sidebar {
-    -webkit-transform: translate3d(0, 0 , 0);
-            transform: translate3d(0, 0 , 0);
-  
-    @include clearfix();
-    margin-bottom: 1em;
-    background-color: #2C5F8C !important;
-    /* CHANGED: do not force full-height on small screens */
-    min-height: auto;
-    padding: 1em;
-    position: relative;
-    color: white;
-  
-    @include breakpoint($large) {
-      @include span(2 of 12);
+.sidebar {
+  -webkit-transform: translate3d(0, 0 , 0);
+          transform: translate3d(0, 0 , 0);
+
+  @include clearfix();
+  margin-bottom: 1em;
+  background-color: #2C5F8C !important;
+  min-height: 100vh;
+  padding: 1em;
+  position: relative;
+  color: white;
+
+  @include breakpoint($large) {
+    @include span(2 of 12);
+    opacity: 1;
+    -webkit-transition: opacity 0.2s ease-in-out;
+            transition: opacity 0.2s ease-in-out;
+    margin-bottom: 0;
+    position: sticky;
+    top: 0;
+
+    &:hover {
       opacity: 1;
-      -webkit-transition: opacity 0.2s ease-in-out;
-              transition: opacity 0.2s ease-in-out;
-      margin-bottom: 0;
-      position: sticky;
-      top: 0;
-      /* CHANGED: only force full-height on large screens and up */
-      min-height: 100vh;
-  
-      &:hover {
-        opacity: 1;
-      }
     }
-  
-  
-    @include breakpoint($x-large) {
-      padding-right: 0;
-    }
-  
-    h2, h3, h4, h5, h6 {
-      color: white;
-  
-      a {
-        color: white;
-        border-bottom: 0;
-      }
-    }
-  
-    p, li, dl {
-      color: white;
-    }
-  
-    a {
-      color: white;
-      &:hover {
-        color: #E6E6E6;
-        text-decoration: none;
-      }
-    }
-  
-    small,
-    .small {
-      color: white;
-    }
-  
-    .video,
-    .tldr {
-      color: white;
-    }
-  
-    .site-title {
-      color: white;
-    }
-  
-    .site-subtitle {
+  }
+
+
+  @include breakpoint($x-large) {
+    padding-right: 0;
+  }
+
+  h2, h3, h4, h5, h6 {
+    margin-bottom: 0;
+    font-family: $sans-serif-narrow;
+    color: white;
+  }
+
+  h3, h4 {
+    font-size: $type-size-5;
+  }
+
+  p, li {
+    font-family: $sans-serif;
+    font-size: $type-size-6;
+    line-height: 1.5;
+    color: white;
+  }
+
+  a {
+    color: white;
+    
+    &:hover {
       color: #cccccc;
     }
-  
-    .sidebar__menu {
-      color: white;
-  
-      a {
-        color: white;
-        &:hover {
-          color: #cccccc;
-        }
-      }
-    }
-  
-    img {
-      width: 100%;
-    }
   }
-  
-  /* Additional specific styling to ensure blue background shows */
-  .sidebar.sticky {
-    background: #2C5F8C !important;
-    color: white !important;
+
+  img {
+    width: 100%;
   }
-  
-  div.sidebar {
-    background: #2C5F8C !important;
-    color: white !important;
-  }
-  
-  /* Target the specific sidebar class used in the template */
-  .sidebar {
-    background: #2C5F8C !important;
-    color: white !important;
-  }
-  
-  .sidebar__right {
-    margin-bottom: 1em;
-  
-    @include breakpoint($large) {
-      position: relative;
-      float: right;
-      width: $right-sidebar-width-narrow;
-      margin-left: span(0.5 of 12);
-      z-index: 10;
-    }
-  
-    @include breakpoint($x-large) {
-      width: $right-sidebar-width;
-    }
-  }
-  
-  /*
-     Author profile and links
-     ========================================================================== */
-  
-  .author__avatar {
-    display: table-cell;
-    vertical-align: top;
-    width: 36px;
-  
-    img {
-      display: block;
-      max-width: 175px; /* adjusted image size on large screens */
-      border-radius: 50%;
-  
-      @include breakpoint($large) {
-        padding: 4px;
-        border: 1px solid rgba(black, 0.1);
-      }
-    }
-  }
-  
-  .author__content {
-    display: table-cell;
-    vertical-align: top;
-    padding-left: 15px;
-    max-width: 480px;
-  }
-  
-  .author__name {
-    margin: 0;
-    padding: 0;
-    font-family: $sans-serif-narrow;
-    font-size: $type-size-3;
-  }
-  
-  .author__bio {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .author__urls-wrapper {
+}
+
+/* Additional specific styling to ensure blue background shows */
+.sidebar.sticky {
+  background: #2C5F8C !important;
+  color: white !important;
+}
+
+div.sidebar {
+  background: #2C5F8C !important;
+  color: white !important;
+}
+
+/* Target the specific sidebar class used in the template */
+.sidebar {
+  background: #2C5F8C !important;
+  color: white !important;
+}
+
+.sidebar__right {
+  margin-bottom: 1em;
+
+  @include breakpoint($large) {
     position: relative;
-    display: table-cell;
-    vertical-align: middle;
-    font-family: $sans-serif-narrow;
+    float: right;
+    width: $right-sidebar-width-narrow;
+    margin-left: span(0.5 of 12);
     z-index: 10;
-  
+  }
+
+  @include breakpoint($x-large) {
+    width: $right-sidebar-width;
+  }
+}
+
+/*
+   Author profile and links
+   ========================================================================== */
+
+.author__avatar {
+  display: table-cell;
+  vertical-align: top;
+  width: 36px;
+  // set width only, for non-square avatars
+  // height: 36px;
+
+  @include breakpoint($large) {
+    display: block;
+    width: auto;
+    height: auto;
+  }
+
+  img {
+    max-width: 175px;
+    border-radius: 50%;
+
     @include breakpoint($large) {
-      display: block;
-      width: 100%;
-    }
-  
-    button {
-      margin-bottom: 0.5em;
-  
-      @include breakpoint($large) {
-        display: none;
-      }
+      padding: 5px;
+      border: 1px solid $border-color;
     }
   }
-  
-  .author__urls {
-    display: none;
-    position: relative;
-    float: left;
-    margin: 0 0 1.25em;
-    padding: 0.5em;
-    list-style-type: none;
-    background-color: mix(#fff, #f2f3f3, 50%);
-    border: 1px solid $border-color;
-    border-radius: $border-radius;
-    -webkit-box-shadow: 0 0 10px rgba(black, 0.15);
-            box-shadow: 0 0 10px rgba(black, 0.15);
-    z-index: 100;
-  
-    &.is--visible {
-      display: block;
-    }
-  
-    @include breakpoint($large) {
-      display: block;
-      float: none;
-      margin: 1em 0;
-      padding: 0.5em 0.75em;
-      background: none;
-      border: 0;
-      -webkit-box-shadow: none;
-              box-shadow: none;
-    }
-  
-    li {
-      white-space: nowrap;
-  
-      @include breakpoint($large) {
-        display: block;
-        padding: 0;
-        width: 100%;
-        margin: 0.5em 0;
-      }
-    }
-  
+}
+
+.author__content {
+  display: table-cell;
+  vertical-align: top;
+  padding-left: 15px;
+  padding-right: 25px;
+  line-height: 1;
+
+  @include breakpoint($large) {
+    display: block;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.author__name {
+  margin: 0;
+
+  @include breakpoint($large) {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+.sidebar .author__name {
+  font-family: $sans-serif;
+  font-size: $type-size-5;
+}
+
+.author__bio {
+  margin: 0;
+
+  @include breakpoint($large) {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+}
+
+.author__urls-wrapper {
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+  font-family: $sans-serif;
+  z-index: 10;
+  position: relative;
+  cursor: pointer;
+
+  li:last-child {
     a {
-      display: block;
-      margin-bottom: 5px;
-      padding-right: 5px;
-      padding-top: 2px;
-      padding-bottom: 2px;
-      color: inherit;
-      font-size: $type-size-5;
-      text-decoration: none;
-  
-      &:hover {
-        text-decoration: none;
-      }
+      margin-bottom: 0;
     }
   }
-  
+
+  @include breakpoint($large) {
+    display: block;
+  }
+
+  button {
+    margin-bottom: 0;
+
+    @include breakpoint($large) {
+      display: none;
+    }
+  }
+}
+
+.author__urls {
+  display: none;
+  position: absolute;
+  right: 0;
+  margin-top: 15px;
+  padding: 10px;
+  list-style-type: none;
+  border: 1px solid $border-color;
+  border-radius: $border-radius;
+  background: #fff;
+  z-index: -1;
+  box-shadow: 0 0 10px rgba(#000, 0.25);
+  cursor: default;
+
+  @include breakpoint($large) {
+    display: block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    box-shadow: none;
+  }
+
+  &:before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: -11px;
+    left: calc(50% - 10px);
+    width: 0;
+    border-style: solid;
+    border-width: 0 10px 10px;
+    border-color: $border-color transparent;
+    z-index: 0;
+
+    @include breakpoint($large) {
+      display: none;
+    }
+  }
+
+  &:after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: calc(50% - 10px);
+    width: 0;
+    border-style: solid;
+    border-width: 0 10px 10px;
+    border-color: #fff transparent;
+    z-index: 1;
+
+    @include breakpoint($large) {
+      display: none;
+    }
+  }
+
+  li {
+    white-space: nowrap;
+  }
+
+  a {
+    display: block;
+    margin-bottom: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    color: inherit;
+    font-size: $type-size-5;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
