--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -39,7 +39,7 @@
 
 
 
-
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 /* ---- Sidebar height & stickiness override (compile last) ---- */
 /* Base (mobile/tablet): do NOT force full-height or sticky */
 body .sidebar {
